--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "prettier"
     ],
     "rules": {
+        "no-console":"off",
         "@typescript-eslint/ban-types":"off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "no-unused-expressions": "off",
