--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "prettier"
     ],
     "rules": {
+        "import/no-duplicates":"off",
         "camelcase":"off",
         "@typescript-eslint/ban-types":"off",
         "@typescript-eslint/no-non-null-assertion": "off",
